iPhoneでのレイアウト崩れ予防のため一部追記

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,3 +1,11 @@
+/* tag -------------------------------------------------------------------------------- */
+/* 共通 -------------------------------------- */
+/* iPhoneでのレイアウト崩れ対応 */
+body {
+    -webkit-appearance: none;
+    -webkit-text-size-adjust: 100%;
+}
+
 /* class -------------------------------------------------------------------------------- */
 /* 共通 -------------------------------------- */
 .icon_margin_left {
