--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -44,6 +44,51 @@ body {
     font-size: 1.15rem;
     display:block;
 }
+.header_menu_padding{
+    padding-right: 1.0rem;
+}
+
+/* Top ------------------------------------------------ */
+/* 画面の背景用 */
+.top-bg-all{
+    width:100%;
+    height:100%;
+    display: flex;
+}
+.top-bg-image{
+    background-image: url("/images/background-image/sea_ishigakijima.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: bottom center;
+    width:100%;
+    height:100%;
+}
+
+.top-centered-container{
+    width:100%;
+    height:100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: column;
+}
+.top-centered-box{
+    padding-left: 10%;
+    padding-right: 10%;
+}
+
+.top-text-appname{
+    color:white;
+    text-align: center;
+    font-size:2rem;
+    
+}
+.top-text{
+    color:white;
+    text-align: center;
+    padding-bottom: 1.0rem;
+}
+
 
 /* WeatherComponent -------------------------------------- */
 /* 現在地/目的地selectエリアのタイトル */
