--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -63,7 +63,7 @@ body {
     width:100%;
     height:100%;
 }
-
+/* 要素の上下左右中央揃え -- containerとbox */
 .top-centered-container{
     width:100%;
     height:100%;
@@ -77,16 +77,34 @@ body {
     padding-right: 10%;
 }
 
+/* Top画面各要素のスタイル */
 .top-text-appname{
     color:white;
     text-align: center;
     font-size:2rem;
-    
+    text-shadow: 0.5px  0.5px 0.5px #0277BD,
+                -0.5px  0.5px 0.5px #0277BD,
+                 0.5px -0.5px 0.5px #0277BD,
+                -0.5px -0.5px 0.5px #0277BD;
 }
 .top-text{
     color:white;
     text-align: center;
     padding-bottom: 1.0rem;
+    font-size:1.2rem;
+    text-shadow: 0.5px  0.5px 0.5px #0277BD,
+                -0.5px  0.5px 0.5px #0277BD,
+                 0.5px -0.5px 0.5px #0277BD,
+                -0.5px -0.5px 0.5px #0277BD;
+}
+.top-button{
+    font-size:1.0rem !important;
+}
+.top-button-box{
+    padding-bottom: 3rem;
+}
+.top-icon-padding{
+    padding-right: 0.2rem;
 }
 
 
