Topページのレイアウトを微修正

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -30,7 +30,9 @@ body {
 .icon-padding-small{
     padding-right: 0.2rem;
 }
-
+.icon-padding-medium{
+    padding-right: 0.3rem;
+}
 
 /* Header -------------------------------------- */
 /* ヘッダー左上のアプリメインタイトル&アイコン */
