v-data-tableのヘッダーデザインを微修正

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -73,7 +73,7 @@ body {
     color:white;
 }
 .theme--light.v-data-table .v-data-table-header th.sortable .v-data-table-header__icon{
-    color:white;
+    color:rgba(255, 255, 255, 0.01);
 }
 
 
