--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -231,13 +231,16 @@ body {
 }
 
 /* About -------------------------------------- */
-.about_all_div{
+.about-all-div{
     margin:2rem;
 }
-.about_h {
+.about-h {
     font-weight: 600;
     /* Headerと同色。orange darken-1 */
     border-bottom: 0.5px solid #FB8C00;
     margin-bottom: 0.5rem;
     margin-top: 2rem;
+}
+.about-button {
+    margin-bottom: 0.5rem;
 }
