--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -190,9 +190,7 @@ body {
     margin-top:1rem;
     margin-right:1rem;
     margin-bottom:1.5rem;
-
-/* お気に入りに登録テキストフィールド */}
-
+}
 /* お気に入りに登録ボタン */
 .weather-ins-button {
     margin-left:2rem;
